# swiftsocket

./: LICENSE  README.md  setup.cfg
examples/async_helloworld/: client.py  server.py
examples/async_helloworld_config/: client.py  helloworld.yml  server.py
src/swiftsocket/: __init__.py  base_wrapper.py  client.py  conf.yml  helpers.py  protocol.py  server.py  simple_client.py  simple_server.py
