[metadata]
name = swiftsocket
version = 0.0.1
author = Andreas Gimpel
author_email = mail@agimpel.com
description = A library to swiftly create sync/async socket clients and servers for IoT projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agimpel/swiftsocket
project_urls =
    Bug Tracker = https://github.com/agimpel/swiftsocket/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml

[options.packages.find]
where = src